--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
   <string name="appName">Print</string>
 
   <string name="about">About</string>
+  <string name="open">Open</string>
   <string name="print">Print</string>
   <string name="share">Share</string>
   <string name="version" formatted="false"><a
