--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
   <string name="about">About</string>
   <string name="open">Open</string>
   <string name="print">Print</string>
+  <string name="markdown">Markdown</string>
   <string name="version" formatted="false"><a
   href="https://github.com/billthefarmer/print/releases/latest">%s</a>\n\nBuilt
   %s\n\nCopyright \u00A9 2021 <a
