--- a/src/main/res/values-tr/strings.xml
+++ b/src/main/res/values-tr/strings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-  <string name="appName">Print</string>
+  <string name="appName">Yazdır</string>
 
-  <string name="about">About</string>
-  <string name="open">Open</string>
-  <string name="print">Print</string>
-  <string name="markdown">Markdown</string>
+  <string name="about">Hakkında</string>
+  <string name="open">Açık</string>
+  <string name="print">Yazdır</string>
+  <string name="markdown">İşaretle</string>
   <string name="version" formatted="false"><a
   href="https://github.com/billthefarmer/print/releases/latest">%s</a>\n\nBuilt
   %s\n\nCopyright \u00A9 2021 <a
